--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "browser-sync": "^2.27.11",
+    "eslint": "^8.37.0",
     "html-validate": "^7.13.3",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
